crates/top/re_sdk/src/snapshots/re_sdk__lenses__test__destructure_cast.snap
---
source: crates/top/re_sdk/src/lenses.rs
expression: "format!(\"{chunk:-240}\")"
---
┌────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ METADATA:                                                                                                  │
│ * entity_path: /nullability/a                                                                              │
│ * heap_size_bytes: [**REDACTED**]                                                                          │
│ * id: [**REDACTED**]                                                                                       │
│ * version: [**REDACTED**]                                                                                  │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ ┌───────────────────────────────────────────────┬────────────────────┬───────────────────────────────────┐ │
│ │ RowId                                         ┆ tick               ┆ Scalars:scalars                   │ │
│ │ ---                                           ┆ ---                ┆ ---                               │ │
│ │ type: FixedSizeBinary[16]                     ┆ type: nullable i64 ┆ type: nullable List[nullable f64] │ │
│ │ ARROW:extension:metadata: {"namespace":"row"} ┆ index_name: tick   ┆ archetype: Scalars                │ │
│ │ ARROW:extension:name: TUID                    ┆ is_sorted: true    ┆ component: Scalars:scalars        │ │
│ │ is_sorted: true                               ┆ kind: index        ┆ component_type: Scalar            │ │
│ │ kind: control                                 ┆                    ┆ kind: data                        │ │
│ ╞═══════════════════════════════════════════════╪════════════════════╪═══════════════════════════════════╡ │
│ │ row_[**REDACTED**]                            ┆ 0                  ┆ [0.0]                             │ │
│ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
│ │ row_[**REDACTED**]                            ┆ 1                  ┆ [1.0]                             │ │
│ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
│ │ row_[**REDACTED**]                            ┆ 2                  ┆ []                                │ │
│ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
│ │ row_[**REDACTED**]                            ┆ 3                  ┆ null                              │ │
│ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
│ │ row_[**REDACTED**]                            ┆ 4                  ┆ [4.0]                             │ │
│ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
│ │ row_[**REDACTED**]                            ┆ 5                  ┆ [null]                            │ │
│ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
│ │ row_[**REDACTED**]                            ┆ 6                  ┆ [6.0]                             │ │
│ └───────────────────────────────────────────────┴────────────────────┴───────────────────────────────────┘ │
└────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
