crates/top/re_sdk/src/snapshots/re_sdk__lenses__test__single_static.snap
---
source: crates/top/re_sdk/src/lenses.rs
expression: "format!(\"{chunk:-240}\")"
---
┌─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ METADATA:                                                                                                                   │
│ * entity_path: /nullability/static                                                                                          │
│ * heap_size_bytes: [**REDACTED**]                                                                                           │
│ * id: [**REDACTED**]                                                                                                        │
│ * version: [**REDACTED**]                                                                                                   │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ ┌───────────────────────────────────────────────┬────────────────────────────────────┬────────────────────────────────────┐ │
│ │ RowId                                         ┆ static_metadata_a                  ┆ static_metadata_b                  │ │
│ │ ---                                           ┆ ---                                ┆ ---                                │ │
│ │ type: FixedSizeBinary[16]                     ┆ type: nullable List[nullable Utf8] ┆ type: nullable List[nullable Utf8] │ │
│ │ ARROW:extension:metadata: {"namespace":"row"} ┆ component: static_metadata_a       ┆ component: static_metadata_b       │ │
│ │ ARROW:extension:name: TUID                    ┆ kind: data                         ┆ kind: data                         │ │
│ │ is_sorted: true                               ┆                                    ┆                                    │ │
│ │ kind: control                                 ┆                                    ┆                                    │ │
│ ╞═══════════════════════════════════════════════╪════════════════════════════════════╪════════════════════════════════════╡ │
│ │ row_[**REDACTED**]                            ┆ [static_metadata_a]                ┆ [static_metadata_b]                │ │
│ └───────────────────────────────────────────────┴────────────────────────────────────┴────────────────────────────────────┘ │
└─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
